--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,12 +13,56 @@
     <!-- calling font-awesome cdn link -->
     <script src="https://kit.fontawesome.com/1e6eb7794e.js" crossorigin="anonymous"></script>
     <!-- calling bootstrap css link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- calling custom css link -->
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body class="bg-light">
+    <!-- start header -->
+    <header class="mt-5 container">
+        <h1 class="text-center"><a class="d-inline-block" href="#"><img class="logo" src="images/logo.png" alt=""></a>
+        </h1>
+        <!-- end header part -->
+    </header>
+    <!-- start main section -->
+    <main class="mt-5 container">
+        <form action="" method="" class="row justify-content-center">
+            <div class="col-md-5 p-4 border">
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email address*</label>
+                    <input type="email" class="form-control">
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password*</label>
+                    <input type="password" class="form-control">
+                    <div id="passwordHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3 d-flex justify-content-between align-items-center">
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    </div>
+                    <div><button type="submit" class="btn btn-primary">Submit</button></div>
+                </div>
+            </div>
+        </form>
+        <!-- end main section -->
+    </main>
+    <!-- start footer section -->
+    <footer class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-5 p-4">
+                <a class="nav-link p-0" href="#">Lost your password?</a>
+            </div>
+        </div>
+    </footer>
     <!-- calling-bootstrap javascript links -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
