--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,12 +13,62 @@
     <!-- calling font-awesome cdn link -->
     <script src="https://kit.fontawesome.com/1e6eb7794e.js" crossorigin="anonymous"></script>
     <!-- calling bootstrap css link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- calling custom css link -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <!-- start header -->
+    <header class="px-3 bg-dark">
+        <nav class="tool-bar navbar navbar-expand-sm">
+            <a class="navbar-brand" href="#"><img class="logo" src="images/logo.png" alt=""></a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="#" class="nav-link"><i class="fas fa-home"></i> Helphub Demo</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link"><i class="fas fa-comment-alt"></i> 0</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link"><i class="fas fa-plus"></i> New</a>
+                </li>
+            </ul>
+            <div class="profile-link ms-auto">
+                <div class="nav-item">
+                    <a class="nav-link toolbar-profile-avatar" href="#"><span>Lorry Kim</span> <img
+                            src="images/tool-bar-profile-avatar.png" alt=""></a>
+                </div>
+            </div>
+        </nav>
+        <!-- end header part -->
+    </header>
+    <!-- start main part  -->
+    <main class="px-3">
+        <div class="row">
+            <section class="col-2">
+                <nav class="navbar">
+                    <ul class="navbar-nav">
+                        <div class="dashboard-link">
+                            <li class="nav-item">
+                                <a href="#dashboardItem" class="nav-link" data-bs-toggle="collapse" aria-expanded="false" aria-controls="dashboardItem"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+                            </li>
+                            <li class="nav-item collapse bg-dark" id="dashboardItem">
+                                <a href="#" class="nav-link">Home</a>
+                                <a href="#" class="nav-link">Updates <span class="badge bg-secondary">4</span></a>
+                            </li>
+                        </div>
+                    </ul>
+                </nav>
+            </section>
+            <section class="col-10"></section>
+        </div>
+    </main>
     <!-- calling-bootstrap javascript links -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
