--- a/login.html
+++ b/login.html
@@ -22,8 +22,9 @@
 <body class="bg-light">
     <!-- start header -->
     <header class="mt-5 container">
-        <h1 class="text-center"><a class="d-inline-block" href="#"><img class="logo" src="images/logo.png" alt=""></a>
+        <h1 class="text-center mb-4"><a class="d-inline-block" href="#"><img class="logo" src="images/logo.png" alt=""></a>
         </h1>
+        <h5 class="text-center">SIGN IN</h5>
         <!-- end header part -->
     </header>
     <!-- start main section -->
@@ -40,12 +41,19 @@
                     <input type="password" class="form-control">
                     <div id="passwordHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
-                <div class="mb-3 d-flex justify-content-between align-items-center">
-                    <div class="form-check">
+                <div class="mb-3">
+                    <div class="form-check mb-4">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        <label class="form-check-label" for="exampleCheck1">Remember me</label>
                     </div>
-                    <div><button type="submit" class="btn btn-primary">Submit</button></div>
+                    <div class="d-grid"><button type="submit" class="btn btn-primary">Sign Me In</button></div>
+                    <div class="mt-4">
+                        <a class="nav-link p-0 text-muted" href="#"><i class="me-3 fas fa-lock"></i>Lost your password?</a>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <h5 class="text-center text-muted">Don't have an account</h5>
+                    <div class="text-center mt-4"><button type="submit" class="btn btn-primary">Sign Up</button></div>
                 </div>
             </div>
         </form>
@@ -54,9 +62,7 @@
     <!-- start footer section -->
     <footer class="container">
         <div class="row justify-content-center">
-            <div class="col-md-5 p-4">
-                <a class="nav-link p-0" href="#">Lost your password?</a>
-            </div>
+            
         </div>
     </footer>
     <!-- calling-bootstrap javascript links -->
