--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
             <div class="profile-link ms-auto">
                 <div class="nav-item">
-                    <a class="nav-link toolbar-profile-avatar" href="#"><span>Lorry Kim</span> <img
+                    <a class="nav-link toolbar-profile-avatar" href="login.html"><span>Lorry Kim</span> <img
                             src="images/tool-bar-profile-avatar.png" alt=""></a>
                 </div>
             </div>
